# eurobot

./: AGENTS.md  LICENSE  README.md  lcd-main.py  led-ring-kb2.py  led-ring-kp.py  led-ring.py  motor-main.py  motor2-main.py  mylib_gamepad.py  mylib_ledring.py  mylib_semaforo.py  pyproject.toml  semaforo-main.py  servo-main.py  servo-motor.py  test_01.py  test_02.py  test_03.py  test_04.py  test_05.py
gamepad-raspberry/: Readme.md  game-async.py  game0.py  keys.txt
setup/: auto-tmux.sh  launch.sh
