[project]
name = "eurobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-neopixel-spi>=1.0.13",
    "adafruit-circuitpython-servokit>=1.3.21",
    "evdev>=1.9.2",
    "pip>=25.2",
    "rpi-gpio>=0.7.1",
    "rplcd>=1.4.0",
    "smbus>=1.1.post2",
    "spidev>=3.8",
]
